[project]
name = "math-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sehrish-hub", email = "sehrishshafiq345@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
math-chatbot = "math_chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
